--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,12 +14,12 @@ body {
 }
 
 a {
-  color: #e03a3c;
+  color: #fc5a2e;
   text-decoration: none;
 }
 
 a:hover {
-  color: #e76668;
+  color: #fc5a2e;
   text-decoration: none;
 }
 
@@ -42,7 +42,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #e03a3c;
+  background: #fc5a2e;
   width: 40px;
   height: 40px;
   border-radius: 4px;
@@ -56,7 +56,7 @@ h6 {
 }
 
 .back-to-top:hover {
-  background: #e65d5f;
+  background: #fc5a2e;
   color: #fff;
 }
 
@@ -102,7 +102,7 @@ h6 {
 }
 
 #header .logo a span {
-  color: #e03a3c;
+  color: #fc5a2e;
 }
 
 #header .logo img {
@@ -114,7 +114,7 @@ h6 {
 --------------------------------------------------------------*/
 .get-started-btn {
   margin-left: 30px;
-  background: #e03a3c;
+  background: #fc5a2e;
   color: #fff;
   border-radius: 4px;
   padding: 8px 25px;
@@ -184,7 +184,7 @@ h6 {
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover>a {
-  color: #e03a3c;
+  color: #fc5a2e;
 }
 
 .navbar .dropdown ul {
@@ -218,7 +218,7 @@ h6 {
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover>a {
-  color: #e03a3c;
+  color: #fc5a2e;
 }
 
 .navbar .dropdown:hover>ul {
@@ -317,7 +317,7 @@ h6 {
 .navbar-mobile a:hover,
 .navbar-mobile .active,
 .navbar-mobile li:hover>a {
-  color: #e03a3c;
+  color: #fc5a2e;
 }
 
 .navbar-mobile .getstarted,
@@ -352,7 +352,7 @@ h6 {
 .navbar-mobile .dropdown ul a:hover,
 .navbar-mobile .dropdown ul .active:hover,
 .navbar-mobile .dropdown ul li:hover>a {
-  color: #e03a3c;
+  color: #fc5a2e;
 }
 
 .navbar-mobile .dropdown>.dropdown-active {
@@ -405,8 +405,8 @@ h6 {
   transition: 0.5s;
   margin-top: 30px;
   color: #fff;
-  background: #e03a3c;
-  border: 2px solid #e03a3c;
+  background: #fc5a2e;
+  border: 2px solid #fc5a2e;
 }
 
 #hero .btn-get-started:hover {
@@ -466,7 +466,7 @@ section {
   display: block;
   width: 50px;
   height: 3px;
-  background: #e03a3c;
+  background: #fc5a2e;
   bottom: 0;
   left: calc(50% - 25px);
 }
@@ -549,11 +549,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #e03a3c;
+  border: 1px solid #fc5a2e;
 }
 
 .clients .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #e03a3c;
+  background-color: #fc5a2e;
 }
 
 .clients .swiper-slide img {
@@ -599,7 +599,7 @@ section {
   font-size: 13px;
   display: inline-flex;
   align-items: center;
-  border: 2px solid #e03a3c;
+  border: 2px solid #fc5a2e;
 }
 
 .about .content .about-btn i {
@@ -608,8 +608,8 @@ section {
 }
 
 .about .content .about-btn:hover {
-  background: #e35052;
-  background: #e03a3c;
+  background: #fc5a2e;
+  background: #fc5a2e;
 }
 
 .about .icon-boxes .icon-box {
@@ -618,7 +618,7 @@ section {
 
 .about .icon-boxes .icon-box i {
   font-size: 40px;
-  color: #e03a3c;
+  color: #fc5a2e;
   margin-bottom: 10px;
 }
 
@@ -670,7 +670,7 @@ section {
   transform: translateX(-50%);
   font-size: 24px;
   background: #fff;
-  color: #e03a3c;
+  color: #fc5a2e;
   border-radius: 50px;
   border: 2px solid #fff;
   box-shadow: 0px 2px 25px rgba(0, 0, 0, 0.1);
@@ -724,13 +724,13 @@ section {
 }
 
 .tabs .nav-link:hover {
-  color: #e03a3c;
+  color: #fc5a2e;
 }
 
 .tabs .nav-link.active {
-  background: #e03a3c;
+  background: #fc5a2e;
   color: #fff;
-  border-color: #e03a3c;
+  border-color: #fc5a2e;
 }
 
 @media (max-width: 768px) {
@@ -796,7 +796,7 @@ section {
 
 .services .icon-box i {
   float: left;
-  color: #e03a3c;
+  color: #fc5a2e;
   font-size: 40px;
   line-height: 0;
 }
@@ -818,7 +818,7 @@ section {
 }
 
 .services .icon-box .icon-box:hover h4 a {
-  color: #e03a3c;
+  color: #fc5a2e;
 }
 
 .services .icon-box p {
@@ -858,7 +858,7 @@ section {
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
   color: #fff;
-  background: #e03a3c;
+  background: #fc5a2e;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -971,11 +971,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #e03a3c;
+  border: 1px solid #fc5a2e;
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #e03a3c;
+  background-color: #fc5a2e;
 }
 
 .portfolio-details .portfolio-info {
@@ -1089,11 +1089,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #e03a3c;
+  border: 1px solid #fc5a2e;
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #e03a3c;
+  background-color: #fc5a2e;
 }
 
 /*--------------------------------------------------------------
@@ -1147,7 +1147,7 @@ section {
 }
 
 .pricing .box ul i {
-  color: #e03a3c;
+  color: #fc5a2e;
   font-size: 18px;
   padding-right: 4px;
 }
@@ -1181,7 +1181,7 @@ section {
 }
 
 .pricing .featured {
-  background: #e03a3c;
+  background: #fc5a2e;
 }
 
 /*--------------------------------------------------------------
@@ -1201,7 +1201,7 @@ section {
 .faq .faq-list a {
   display: block;
   position: relative;
-  font-family: #e03a3c;
+  font-family: #fc5a2e;
   font-size: 18px;
   line-height: 24px;
   font-weight: 400;
@@ -1230,7 +1230,7 @@ section {
 }
 
 .faq .faq-list a.collapsed:hover {
-  color: #e03a3c;
+  color: #fc5a2e;
 }
 
 .faq .faq-list a.collapsed .icon-show {
@@ -1275,7 +1275,7 @@ section {
   border-radius: 50px;
   width: 36px;
   height: 36px;
-  background: #e03a3c;
+  background: #fc5a2e;
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -1335,7 +1335,7 @@ section {
 
 .contact .info-box i {
   font-size: 32px;
-  color: #e03a3c;
+  color: #fc5a2e;
   border-radius: 50%;
   padding: 8px;
   border: 2px dotted #f8d4d5;
@@ -1364,7 +1364,7 @@ section {
 .contact .php-email-form .error-message {
   display: none;
   color: #fff;
-  background: #ed3c0d;
+  background: #fc5a2e;
   text-align: left;
   padding: 15px;
   font-weight: 600;
@@ -1428,7 +1428,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit] {
-  background: #e03a3c;
+  background: #fc5a2e;
   border: 0;
   padding: 10px 32px;
   color: #fff;
@@ -1437,7 +1437,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit]:hover {
-  background: #e35052;
+  background: #fc5a2e;
 }
 
 @-webkit-keyframes animate-loading {
@@ -1492,7 +1492,7 @@ section {
 }
 
 .blog .entry .entry-title a:hover {
-  color: #e03a3c;
+  color: #fc5a2e;
 }
 
 .blog .entry .entry-meta {
@@ -1537,7 +1537,7 @@ section {
 
 .blog .entry .entry-content .read-more a {
   display: inline-block;
-  background: #e03a3c;
+  background: #fc5a2e;
   color: #fff;
   padding: 6px 20px;
   transition: 0.3s;
@@ -1546,7 +1546,7 @@ section {
 }
 
 .blog .entry .entry-content .read-more a:hover {
-  background: #e35052;
+  background: #fc5a2e;
 }
 
 .blog .entry .entry-content h3 {
@@ -1601,7 +1601,7 @@ section {
 }
 
 .blog .entry .entry-footer a:hover {
-  color: #e03a3c;
+  color: #fc5a2e;
 }
 
 .blog .entry .entry-footer .cats {
@@ -1710,7 +1710,7 @@ section {
 }
 
 .blog .blog-comments .comment h5 a:hover {
-  color: #e03a3c;
+  color: #fc5a2e;
 }
 
 .blog .blog-comments .comment h5 .reply {
@@ -1756,7 +1756,7 @@ section {
 
 .blog .blog-comments .reply-form input:focus {
   box-shadow: none;
-  border-color: #ee9293;
+  border-color: #fc5a2e;
 }
 
 .blog .blog-comments .reply-form textarea {
@@ -1993,7 +1993,7 @@ section {
 }
 
 #footer .footer-top .footer-contact h3 span {
-  color: #e03a3c;
+  color: #fc5a2e;
 }
 
 #footer .footer-top .footer-contact p {
@@ -2016,7 +2016,7 @@ section {
   display: block;
   width: 20px;
   height: 2px;
-  background: #e03a3c;
+  background: #fc5a2e;
   bottom: 0;
   left: 0;
 }
@@ -2103,7 +2103,7 @@ section {
 }
 
 #footer .footer-newsletter form input[type=submit]:hover {
-  background: #e35052;
+  background: #fc5a2e;
 }
 
 #footer .credits {
@@ -2127,7 +2127,7 @@ section {
 }
 
 #footer .social-links a:hover {
-  background: #e03a3c;
+  background: #fc5a2e;
   color: #fff;
   text-decoration: none;
 }
